[MBA]adding ingredients UI + relatedRecipes